<resources>
    <string name="app_name">ZeniInvestment</string>
    <string name="btn_init">Simular</string>
    <string name="txt_input_money">R$ 0,00</string>
    <string name="txt_input_aporte">R$ 0,00</string>
    <string name="title_second_page">Simule seu investimento</string>
    <string name="sub_title_two_">invista nos seus sonhos</string>
    <string name="value_init">R$ 0,00</string>
    <string name="txt_input_fees">10,00</string>
    <string name="txt_input_years">5</string>
    <string name="txt_value_init">Valor inicial</string>
    <string name="txt_contribution">Aporte mensal</string>
    <string name="txt_fees">Taxa de juros (% ao ano)</string>
    <string name="txt_years">Tempos (anos)</string>
    <string name="btn_advance">Avançar</string>
    <string name="title_result">Resultado da Simulçao</string>
    <string name="txt_gain">Lucro obtido</string>
    <string name="txt_cumulative_total">Valor final acumulado</string>
    <string name="txt_investment_years">após 10 anos de investimento</string>
    <string name="txt_total_invested">Total investido</string>
    <string name="txt_summary_by_year">☷ Resumo por Ano</string>
    <string name="icon_final">TODO</string>
    <string name="btn_finish">Finalizar</string>
</resources>