<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Calculate"
    android:background="@color/white">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_input_money"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_title_two">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_money"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_input_money"
            android:background="@drawable/gradient_bg"
            android:inputType="numberDecimal"
            android:digits="0123456789,"
            android:maxLength="10"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_input_contribution"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintEnabled="false"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_input_money">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_contribution"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_input_aporte"
            android:inputType="numberDecimal"
            android:digits="0123456789,"
            android:maxLength="10"
            android:background="@drawable/gradient_bg"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_second_page"
        android:layout_marginTop="35dp"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textColor="@color/green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_title_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sub_title_two_"
        android:textStyle="italic|bold"
        android:textColor="@color/yellow"

        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_title" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_input_taxa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:hintEnabled="false"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_input_contribution">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_taxa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_input_fees"
            android:inputType="numberDecimal"
            android:digits="0123456789,"
            android:maxLength="5"
            android:background="@drawable/gradient_bg"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_input_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintEnabled="false"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_input_taxa">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_input_years"
            android:inputType="numberDecimal"
            android:digits="0123456789,"
            android:maxLength="4"
            android:background="@drawable/gradient_bg"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/txt_money"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/txt_value_init"
        android:textColor="@color/green"
        android:drawablePadding="8dp"
        android:textStyle="bold"
        app:drawableStartCompat="@drawable/money"
        app:layout_constraintBottom_toTopOf="@+id/txt_input_money"
        app:layout_constraintStart_toStartOf="parent"
         />

    <TextView
        android:id="@+id/txt_contribution"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/txt_contribution"
        android:textColor="@color/green"
        android:drawablePadding="8dp"
        android:textStyle="bold"
        app:drawableStartCompat="@drawable/date"
        app:layout_constraintBottom_toTopOf="@+id/txt_input_contribution"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txt_fees"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/txt_fees"
        android:textColor="@color/green"
        android:drawablePadding="8dp"
        android:textStyle="bold"
        app:drawableStartCompat="@drawable/percent"
        app:layout_constraintBottom_toTopOf="@+id/txt_input_taxa"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txt_years"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/txt_years"
        android:textColor="@color/green"
        android:drawablePadding="8dp"
        android:textStyle="bold"
        app:drawableStartCompat="@drawable/calendar"
        app:layout_constraintBottom_toTopOf="@+id/txt_input_time"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_calc"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/green"
        android:text="@string/btn_advance"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_input_time" />

</androidx.constraintlayout.widget.ConstraintLayout>